:bug: Corrección de pequeños detalles

--- a/web/templates/evaluacion.html
+++ b/web/templates/evaluacion.html
@@ -161,9 +161,9 @@
           <td width="15px">&nbsp;</td>
           <td>
               <div style="width: 100%;">
-                <div style="display: inline-block; width: 30%; background-color:{{ COLORS.primary.3 }} !important;margin:0px;padding:0px;text-align: center;"><small>No Recomendado</small></div>
-                <div style="display: inline-block; width: 30%; background-color:{{ COLORS.primary.2 }} !important;margin:0px;padding:0px;text-align: center;"><small>Con Reserva</small></div>
-                <div style="display: inline-block; width: 30%; background-color:{{ COLORS.primary.0 }} !important;margin:0px;padding:0px;text-align: center;"><small>Recomendado</small></div>
+                <div style="display: inline-block; width: 33%; margin: 0px; padding: 0px; background-color:{{ COLORS.primary.3 }} !important;margin:0px;padding:0px;text-align: center;"><small>No Recomendado</small></div>
+                <div style="display: inline-block; width: 33%; margin: 0px; padding: 0px; background-color:{{ COLORS.primary.2 }} !important;margin:0px;padding:0px;text-align: center;"><small>Con Reserva</small></div>
+                <div style="display: inline-block; width: 32%; margin: 0px; padding: 0px; background-color:{{ COLORS.primary.0 }} !important;margin:0px;padding:0px;text-align: center;"><small>Recomendado</small></div>
               </div>
           </td>
           <td width="200px">&nbsp;</td>
