--- a/web/templates/evaluacion_list.html
+++ b/web/templates/evaluacion_list.html
@@ -79,7 +79,7 @@ th.rotated-text > div > span {
           {% if evaluacion.get_calificacion.total > 0 %}
             {{ evaluacion.get_calificacion.nivel }}
           {% else %}
-            Sin resultado
+            Resultados Incompletos
           {% endif %}
         </td>
         <td>{{ evaluacion.fecha|date:'d/m/Y' }}</td>
